common-applications/control/cloudsca/analysis.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sca-analysis
  namespace: sca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sca-analysis
  template:
    metadata:
      labels:
        app: sca-analysis
    spec:
      imagePullSecrets:
        - name: sca-sec
      containers:
      - name: sca-analysis
        image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/sca-analysis:6d158acc956e84c49500b183a0ad5703bb77d7d6
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 8015
        resources:
          requests:
            cpu: 500m
            memory: 2G
          limits:
            cpu: 1000m
            memory: 4G
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: sca-analysissca-web
  namespace: sca
  labels:
    app: sca-analysis
spec:
  type: ClusterIP
  ports:
    - port: 8015
      protocol: TCP
      name: analysis-app
      targetPort: 8015
  selector:
    app: sca-analysis
