common-applications/control/cloudsca/dm.yaml
# Deployment 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sca-dm
  namespace: sca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sca-dm
  template:
    metadata:
      labels:
        app: sca-dm
    spec:
      imagePullSecrets:
        - name: sca-sec
      containers:
      - name: sca-dm
        image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/sca-datamanager:6a082c8dc57e59acb2e8d7b6b1b37d916559ec3c
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 7979
        resources:
          requests:
            cpu: 200m
            memory: 2G
          limits:
            cpu: 2000m
            memory: 4G
---
# Service 
apiVersion: v1
kind: Service
metadata:
  name: sca-dm
  namespace: sca
  labels:
    app: sca-dm
spec:
  type: ClusterIP
  ports:
    - port: 7979
      protocol: TCP
      name: dm-app
      targetPort: 7979
  selector:
    app: sca-dm
