common-applications/control/cloudsca/eureka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: sca
  labels:
    app: eureka
spec:
  type: ClusterIP
  ports:
    - port: 9000
      name: eureka
      targetPort: 9000
  selector:
    app: eureka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  namespace: sca
spec:
  replicas: 2
  serviceName: "eureka"
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      imagePullSecrets:
        - name: sca-sec
      containers:
        - name: eureka
          image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/sca-eureka:9c9603758450d2c4cb107acea0d9d90ce0a7db17
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 600Mi
