common-applications/control/cloudsca/gateway.yaml
# Deployment 
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sca-gateway
  namespace: sca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sca-gateway
  template:
    metadata:
      labels:
        app: sca-gateway
    spec:
      imagePullSecrets:
        - name: sca-sec
      containers:
      - name: sca-gateway
        image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/sca-gateway:6a082c8dc57e59acb2e8d7b6b1b37d916559ec3c
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 8015
        resources:
          requests:
            cpu: 200m
            memory: 1024Mi
          limits:
            cpu: 800m
            memory: 2G
---
# Service 
apiVersion: v1
kind: Service
metadata:
  name: sca-gateway
  namespace: sca
  labels:
    app: sca-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: gateway-app
      protocol: TCP
      targetPort: 8080
  selector:
    app: sca-gateway
